# mgrs

./: README.md  mgrs.py  pyproject.toml
.github/workflows/: publish.yml
