[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mgrs-pure-python"
version = "0.1.0"
description = "Pure Python MGRS <-> latitude/longitude conversion library."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Aydin Kilic", email = "aydinkilic@gmail.com" }
]
keywords = ["mgrs", "utm", "gis", "geospatial", "coordinates"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://github.com/aydink/mgrs"
Repository = "https://github.com/aydink/mgrs"

[project.scripts]
mgrs = "mgrs:main"

[tool.setuptools]
py-modules = ["mgrs"]
